# AI_search_with_mcp

./: .deploymentignore  .gitignore  README.md  azure.yaml  main.py  pyproject.toml  requirements.txt  testing.ipynb
infra/: azureOpenAi.bicep  createSearchDataSource.bicep  createSearchIndex.bicep  createSearchIndexer.bicep  createSkillset.bicep  main.bicep  managedIdentity.bicep  openAiRoleAssignment.bicep  searchService.bicep  searchServiceRoleAssignment.bicep  storageAccount.bicep  storageAccountRoleAssignment.bicep  webApp.bicep
